# ComUtil

./: CMakeLists.txt
ComUtil/: CMakeLists.txt  singleton.hpp
TestComUtil/: CMakeLists.txt  main.cpp
